--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -805,7 +805,7 @@ ul.dropdown-padding.color-s-4 li:hover {
 }
 
 /* homepage-2 header */
-a.theme-btn5 {
+.theme-btn5 {
   border-radius: 4px;
   background: #184E77;
   color: #ffff;
@@ -818,13 +818,13 @@ a.theme-btn5 {
   overflow: hidden;
   border: 1px solid #1A237E;
 }
-a.theme-btn5 span{
+.theme-btn5 span{
   display: inline-block;
   width: 12px;
   height: 20px;
   margin: 0 0 0 8px;
 }
-a.theme-btn5::after{
+.theme-btn5::after{
   position: absolute;
   content: "";
   height:100%;
@@ -837,7 +837,7 @@ a.theme-btn5::after{
   color: #000;
   border-radius: 4px;
 }
-a.theme-btn5:hover::after{
+.theme-btn5:hover::after{
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -846,7 +846,7 @@ a.theme-btn5:hover::after{
   color: #000;
   
 }
-a.theme-btn5:hover{
+.theme-btn5:hover{
   color: #1A237E;
 }
 
